--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <header>
-    <title>Title</title>
+    <title>Less-Than</title>
     <link rel='stylesheet' href='reset.css'>
     <!-- BootStrap -->
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
@@ -24,10 +24,15 @@
 
 <body>
     <div class='container'>
-        <div class='row'>
-            <div class='col'>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Song</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    else.</small>
             </div>
-        </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
 </body>
 <script type='text/javascript' src='javascript/magic.js'></script>
