--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <header>
     <title>Less-Than</title>
-    <link rel='stylesheet' href='reset.css'>
+    <!-- <link rel='stylesheet' href='reset.css'> -->
     <!-- BootStrap -->
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'
         integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
@@ -26,15 +26,14 @@
     <div class='container'>
         <form>
             <div class="form-group">
-                <label for="exampleInputEmail1">Song</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
+                <label for="songSearchInput">Song</label>
+                <input type="text" class="form-control" id="songSearchInput" aria-describedby="songHelp">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Search</button>
         </form>
     </div>
 </body>
-<script type='text/javascript' src='javascript/magic.js'></script>
+<script type='text/javascript' src='magic.js'></script>
+
 
 </html>
