--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <div class='container'>
         <form>
             <div class="form-group">
-                <label for="songSearchInput">Song</label>
-                <input type="text" class="form-control" id="songSearchInput" aria-describedby="songHelp">
+                <label for="songSearchInput">First Song</label>
+                <input type="text" class="form-control" id="songSearchInput1" aria-describedby="songHelp" placeholder="First Song Title">
+            </div>
+            <div class="form-group">
+                <label for="songSearchInput">Second Song</label>
+                <input type="text" class="form-control" id="songSearchInput2" aria-describedby="songHelp" placeholder="Second Song Title">
             </div>
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
