--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.0.min.js'></script>
     <!-- Firebase -->
     <script src='https://www.gstatic.com/firebasejs/4.12.0/firebase.js'></script>
+    <!-- Genius -->
+    <script src="https://genius.codes"></script>
     <link rel='stylesheet' href='style.css'>
 </header>
 
